--- a/src/index.css
+++ b/src/index.css
@@ -17,3 +17,29 @@ body {
 	width: 100%;
 	height: 100%;
 }
+
+body {
+	background: rgb(252, 207, 201);
+	background: linear-gradient(
+		180deg,
+		rgba(252, 207, 201, 1) 0%,
+		rgba(255, 255, 255, 1) 100%
+	);
+	background-repeat: no-repeat;
+}
+
+.App {
+	font-family: "Open Sans", sans-serif;
+	width: inherit;
+	height: 100vh;
+	overflow-y: auto;
+}
+
+.wrapper {
+	max-width: 600px;
+	margin: 0 auto;
+}
+
+.button-list {
+	padding: 2rem;
+}
